@@ -1,5 +1,13 @@
 2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
+	* gtksourceview/gtksourcecompletion.c:
+	* gtksourceview/gtksourcecompletion.h:
+	* gtksourceview/gtksourcecompletionproposal.c:
+	* gtksourceview/gtksourcecompletionproposal.h:
+	Fixed some doc warnings.
+
+2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
 	* docs/reference/gtksourceview-2.0-sections.txt:
 	* docs/reference/gtksourceview-docs.sgml:
 	* gtksourceview/gtksourcecompletiontriggerkey.h:
